refactor: :rotating_light: fix sonnarlint warnings